曲選択画面のUItestを追加

--- a/spotter/Storyboards/SelectMusic.storyboard
+++ b/spotter/Storyboards/SelectMusic.storyboard
@@ -27,12 +27,14 @@
                             </tableView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="#嬉しい" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fL6-sl-w5a">
                                 <rect key="frame" x="154.5" y="118" width="66" height="21"/>
+                                <accessibility key="accessibilityConfiguration" identifier="emotionLabel"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="今の気持ちに合う曲を選択" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cnh-Qc-fbU">
                                 <rect key="frame" x="71.5" y="81" width="232.5" height="23"/>
+                                <accessibility key="accessibilityConfiguration" identifier="descriptionLabel"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
