--- a/spotter/Classes/Views/TimeLineTableViewCell.xib
+++ b/spotter/Classes/Views/TimeLineTableViewCell.xib
@@ -12,37 +12,37 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="146" id="KGk-i7-Jjw" customClass="TimelineTableViewCell" customModule="spotter">
-            <rect key="frame" x="0.0" y="0.0" width="453" height="146"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="67" id="KGk-i7-Jjw" customClass="TimelineTableViewCell" customModule="spotter">
+            <rect key="frame" x="0.0" y="0.0" width="325" height="67"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="453" height="145.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="325" height="66.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fKs-ic-Fvb">
-                        <rect key="frame" x="18" y="27" width="100" height="90"/>
-                        <accessibility key="accessibilityConfiguration" identifier="faceImageView"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="100" id="i7o-B4-Imn"/>
-                            <constraint firstAttribute="height" constant="90" id="p1p-OO-CdH"/>
-                        </constraints>
-                    </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TweetBox" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dpM-2t-KsA">
-                        <rect key="frame" x="148" y="0.0" width="305" height="146"/>
+                        <rect key="frame" x="89" y="0.0" width="236" height="67"/>
                         <accessibility key="accessibilityConfiguration" identifier="tweetTextBox"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fKs-ic-Fvb">
+                        <rect key="frame" x="8" y="2" width="64" height="62"/>
+                        <accessibility key="accessibilityConfiguration" identifier="faceImageView"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="62" id="89h-IP-fB7"/>
+                            <constraint firstAttribute="width" constant="64" id="TcP-8v-boR"/>
+                        </constraints>
+                    </imageView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="dpM-2t-KsA" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="-8" id="4Fa-E8-wky"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="dpM-2t-KsA" secondAttribute="bottom" constant="-8.5" id="6aK-I0-yqh"/>
-                    <constraint firstItem="dpM-2t-KsA" firstAttribute="leading" secondItem="fKs-ic-Fvb" secondAttribute="trailing" constant="30" id="IKz-a6-uXr"/>
-                    <constraint firstAttribute="trailing" secondItem="dpM-2t-KsA" secondAttribute="trailing" id="OIx-gz-uu0"/>
-                    <constraint firstItem="fKs-ic-Fvb" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="19" id="Qd9-EQ-DkN"/>
-                    <constraint firstItem="fKs-ic-Fvb" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="10" id="ccM-9o-Gnz"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="fKs-ic-Fvb" secondAttribute="bottom" constant="20.5" id="vtw-Zd-SgL"/>
+                    <constraint firstItem="dpM-2t-KsA" firstAttribute="leading" secondItem="fKs-ic-Fvb" secondAttribute="trailing" constant="17" id="3Oc-Vn-nOa"/>
+                    <constraint firstAttribute="bottom" secondItem="dpM-2t-KsA" secondAttribute="bottom" id="8AG-5N-wC3"/>
+                    <constraint firstAttribute="trailing" secondItem="dpM-2t-KsA" secondAttribute="trailing" id="8vY-qI-Y2e"/>
+                    <constraint firstItem="fKs-ic-Fvb" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="Jk0-v3-oXY"/>
+                    <constraint firstItem="dpM-2t-KsA" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="kba-lW-SfR"/>
+                    <constraint firstItem="fKs-ic-Fvb" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="-6" id="uDO-He-tZl"/>
+                    <constraint firstAttribute="bottom" secondItem="dpM-2t-KsA" secondAttribute="bottom" id="xnI-j6-FPe"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -61,7 +61,7 @@
                 <outlet property="faceImageView" destination="fKs-ic-Fvb" id="7Rm-bw-XBb"/>
                 <outlet property="tweetText" destination="dpM-2t-KsA" id="ykg-Zm-5fy"/>
             </connections>
-            <point key="canvasLocation" x="214" y="8"/>
+            <point key="canvasLocation" x="252.5" y="-25.5"/>
         </tableViewCell>
     </objects>
 </document>
