--- a/spotter/Storyboards/TimeLine.storyboard
+++ b/spotter/Storyboards/TimeLine.storyboard
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="timelineView" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="l2S-eh-BEE">
-                                <rect key="frame" x="0.0" y="146" width="320" height="422"/>
+                                <rect key="frame" x="0.0" y="141" width="320" height="427"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <sections/>
                                 <connections>
@@ -28,9 +28,9 @@
                                 </connections>
                             </tableView>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="120" translatesAutoresizingMaskIntoConstraints="NO" id="5el-X6-mr7">
-                                <rect key="frame" x="20" y="50" width="281" height="69"/>
+                                <rect key="frame" x="20" y="20" width="281" height="69"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="komei" translatesAutoresizingMaskIntoConstraints="NO" id="8tI-pk-sOX">
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="komei" translatesAutoresizingMaskIntoConstraints="NO" id="8tI-pk-sOX">
                                         <rect key="frame" x="0.0" y="0.0" width="78" height="69"/>
                                         <accessibility key="accessibilityConfiguration" identifier="profileImage">
                                             <bool key="isElement" value="YES"/>
@@ -40,23 +40,24 @@
                                             <constraint firstAttribute="width" constant="78" id="Wc1-tw-bSV"/>
                                         </constraints>
                                     </imageView>
-                                    <button opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gek-tw-iic">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gek-tw-iic">
                                         <rect key="frame" x="198" y="0.0" width="83" height="69"/>
                                         <accessibility key="accessibilityConfiguration" identifier="tweetButton"/>
                                         <state key="normal" title="Button" image="pen"/>
                                     </button>
                                 </subviews>
                                 <constraints>
+                                    <constraint firstItem="Gek-tw-iic" firstAttribute="leading" secondItem="8tI-pk-sOX" secondAttribute="trailing" constant="120" id="88k-ug-jc6"/>
                                     <constraint firstItem="8tI-pk-sOX" firstAttribute="leading" secondItem="5el-X6-mr7" secondAttribute="leading" id="Aw2-7u-u6w"/>
-                                    <constraint firstAttribute="trailing" secondItem="Gek-tw-iic" secondAttribute="trailing" id="Say-Ri-h0u"/>
                                     <constraint firstItem="8tI-pk-sOX" firstAttribute="top" secondItem="5el-X6-mr7" secondAttribute="top" id="SmC-Hg-ubx"/>
                                     <constraint firstAttribute="height" constant="69" id="a6b-LE-Zpk"/>
-                                    <constraint firstItem="Gek-tw-iic" firstAttribute="leading" secondItem="8tI-pk-sOX" secondAttribute="trailing" constant="120" id="qWI-kE-Hnf"/>
-                                    <constraint firstItem="Gek-tw-iic" firstAttribute="top" secondItem="5el-X6-mr7" secondAttribute="top" id="wU0-K8-5H3"/>
+                                    <constraint firstAttribute="trailing" secondItem="Gek-tw-iic" secondAttribute="trailing" id="lgw-DQ-aFE"/>
+                                    <constraint firstAttribute="bottom" secondItem="Gek-tw-iic" secondAttribute="bottom" id="nru-fz-g6T"/>
+                                    <constraint firstItem="Gek-tw-iic" firstAttribute="top" secondItem="5el-X6-mr7" secondAttribute="top" id="zaH-pW-iEg"/>
                                 </constraints>
                             </stackView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="こーめい" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O3Z-lT-786">
-                                <rect key="frame" x="27" y="127" width="69.5" height="20.5"/>
+                                <rect key="frame" x="20" y="97" width="69.5" height="20.5"/>
                                 <accessibility key="accessibilityConfiguration" identifier="usernameLabel"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="20.5" id="8Pl-OR-lrI"/>
@@ -69,16 +70,15 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="Qrh-KC-Kc1" firstAttribute="trailing" secondItem="5el-X6-mr7" secondAttribute="trailing" constant="19" id="2WY-oS-9HH"/>
-                            <constraint firstItem="l2S-eh-BEE" firstAttribute="bottom" secondItem="Qrh-KC-Kc1" secondAttribute="bottom" id="8rq-Ud-NUk"/>
+                            <constraint firstItem="l2S-eh-BEE" firstAttribute="bottom" secondItem="Qrh-KC-Kc1" secondAttribute="bottom" id="2xP-uw-QOT"/>
                             <constraint firstItem="5el-X6-mr7" firstAttribute="leading" secondItem="Qrh-KC-Kc1" secondAttribute="leading" constant="20" id="A5b-DT-aTw"/>
-                            <constraint firstItem="5el-X6-mr7" firstAttribute="top" secondItem="Qrh-KC-Kc1" secondAttribute="top" constant="30" id="Hdt-5W-3hc"/>
-                            <constraint firstItem="l2S-eh-BEE" firstAttribute="trailing" secondItem="Qrh-KC-Kc1" secondAttribute="trailing" id="JBu-Ze-1Xz"/>
-                            <constraint firstItem="O3Z-lT-786" firstAttribute="top" secondItem="5el-X6-mr7" secondAttribute="bottom" constant="8" id="eAK-Ds-9V6"/>
-                            <constraint firstItem="l2S-eh-BEE" firstAttribute="top" secondItem="5el-X6-mr7" secondAttribute="bottom" constant="27" id="eOY-Vd-9iQ"/>
+                            <constraint firstItem="l2S-eh-BEE" firstAttribute="leading" secondItem="Qrh-KC-Kc1" secondAttribute="leading" id="Adm-II-AkS"/>
+                            <constraint firstItem="5el-X6-mr7" firstAttribute="top" secondItem="Qrh-KC-Kc1" secondAttribute="top" id="Hdt-5W-3hc"/>
+                            <constraint firstItem="l2S-eh-BEE" firstAttribute="trailing" secondItem="Qrh-KC-Kc1" secondAttribute="trailing" id="Y9n-Wv-pdG"/>
+                            <constraint firstItem="l2S-eh-BEE" firstAttribute="top" secondItem="O3Z-lT-786" secondAttribute="bottom" constant="23.5" id="efm-PN-gGU"/>
+                            <constraint firstItem="Qrh-KC-Kc1" firstAttribute="trailing" secondItem="5el-X6-mr7" secondAttribute="trailing" constant="19" id="fuJ-Pd-xYA"/>
                             <constraint firstItem="O3Z-lT-786" firstAttribute="top" secondItem="5el-X6-mr7" secondAttribute="bottom" constant="8" id="gYh-LY-Hjm"/>
-                            <constraint firstItem="O3Z-lT-786" firstAttribute="leading" secondItem="Qrh-KC-Kc1" secondAttribute="leading" constant="27" id="iSA-Ms-AAj"/>
-                            <constraint firstItem="l2S-eh-BEE" firstAttribute="leading" secondItem="Qrh-KC-Kc1" secondAttribute="leading" id="lTB-Yt-zYm"/>
+                            <constraint firstItem="O3Z-lT-786" firstAttribute="leading" secondItem="Qrh-KC-Kc1" secondAttribute="leading" constant="20" id="iSA-Ms-AAj"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Qrh-KC-Kc1"/>
                     </view>
@@ -93,6 +93,6 @@
     </scenes>
     <resources>
         <image name="komei" width="460" height="460"/>
-        <image name="pen" width="130" height="114"/>
+        <image name="pen" width="724" height="724"/>
     </resources>
 </document>
