--- a/spotter/Storyboards/TimeLine.storyboard
+++ b/spotter/Storyboards/TimeLine.storyboard
@@ -53,6 +53,7 @@
                             </imageView>
                             <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8O2-Mo-bzl">
                                 <rect key="frame" x="199" y="23" width="77" height="77"/>
+                                <accessibility key="accessibilityConfiguration" identifier="tweetButton"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="77" id="st0-jd-9nZ"/>
                                     <constraint firstAttribute="height" constant="77" id="z4l-r4-AOm"/>
