--- a/spotter/Storyboards/ConfirmTweet.storyboard
+++ b/spotter/Storyboards/ConfirmTweet.storyboard
@@ -12,7 +12,7 @@
         <!--confirmTweet-->
         <scene sceneID="h4Q-dM-ruc">
             <objects>
-                <viewController title="confirmTweet" id="nLb-0A-OFR" sceneMemberID="viewController">
+                <viewController title="confirmTweet" id="nLb-0A-OFR" customClass="ConfirmTweetViewController" customModule="spotter" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="oZe-XS-PGK">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -57,6 +57,9 @@
                                         <real key="value" value="20"/>
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="emoteButton:" destination="nLb-0A-OFR" eventType="touchUpInside" id="VWZ-FD-Jiz"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
