--- a/spotter/Storyboards/TimeLine.storyboard
+++ b/spotter/Storyboards/TimeLine.storyboard
@@ -40,7 +40,7 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="komei" translatesAutoresizingMaskIntoConstraints="NO" id="8tI-pk-sOX">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8tI-pk-sOX">
                                 <rect key="frame" x="20" y="23" width="78" height="78"/>
                                 <accessibility key="accessibilityConfiguration" identifier="profileImage">
                                     <bool key="isElement" value="YES"/>
@@ -97,7 +97,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="komei" width="460" height="460"/>
         <image name="pen" width="724" height="724"/>
     </resources>
 </document>
